--- a/docs/docs/cmd/spe/container/container-permission-list.mdx
+++ b/docs/docs/cmd/spe/container/container-permission-list.mdx
@@ -21,6 +21,25 @@ m365 spe container permission list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                   |
+  |-----------------|-------------------------------|
+  | Microsoft Graph | FileStorageContainer.Selected |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                   |
+  |-----------------|-------------------------------|
+  | Microsoft Graph | FileStorageContainer.Selected |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Lists Container permissions.
