Apply suggestions from code review
Co-authored-by: Milan Holemans <11723921+milanholemans@users.noreply.github.com>

--- a/docs/docs/user-guide/using-cli-mcp-server.mdx
+++ b/docs/docs/user-guide/using-cli-mcp-server.mdx
@@ -14,7 +14,7 @@ For the latest updates and guides, please refer to the [CLI for Microsoft 365 MC
 
 Before getting started, please review the following prerequisites:
 
-- Node.js LTS version
+- Installed Node.js LTS version
 - CLI for Microsoft 365 installed globally (`npm i -g @pnp/cli-microsoft365@latest`)
 - CLI for Microsoft 365 setup with your Microsoft 365 tenant - you may use [m365 setup](../cmd/setup) command
 
@@ -44,9 +44,9 @@ This MCP server works with any MCP client you prefer. To achieve that, refer to 
 2. Select `Command (stdio)` as the server type.
 3. Enter the command to run the MCP server, which is:
 
-  ```sh
+    ```sh
     npx -y @pnp/cli-microsoft365-mcp-server@latest
-  ```
+    ```
 
 4. Name the server (e.g., CLI for Microsoft 365 MCP Server).
 
@@ -69,7 +69,7 @@ As a result, you should have the following configuration:
 
 ## Using MCP Server
 
-The following uses cases are only a few examples of how you may use this MCP server. It is capable of handling many different tasks, so feel free to experiment with it and manage all of Microsoft 365 using natural language.
+The following use cases are only a few examples of how you may use this MCP server. It is capable of handling many different tasks, so feel free to experiment with it and manage all of Microsoft 365 using natural language.
 
 Also, you may check the [wiki](https://github.com/pnp/cli-microsoft365-mcp-server/wiki) to find more [scenarios](https://github.com/pnp/cli-microsoft365-mcp-server/wiki/1.-Scenarios) showing how CLI for Microsoft 365 MCP Server can be used to manage Microsoft 365.
 
@@ -108,7 +108,7 @@ prompt:
   can you check if I have HoursReportingReminder flow and if so disable it
 ```
 
-![Screenshot of Visual Studio Code with GitHub Copilot chat with a prompt to disable a PowerAutomate Flow and a web browser presenting the list of flows with one being disabled from the prompt](../images/cli-mcp-server/mcp-example-3.png)
+![Screenshot of Visual Studio Code with GitHub Copilot chat with a prompt to disable a Power Automate Flow and a web browser presenting the list of flows with one being disabled from the prompt](../images/cli-mcp-server/mcp-example-3.png)
 
 ### Manage Planner
 
