--- a/docs/docs/cmd/outlook/mail/mail-searchfolder-add.mdx
+++ b/docs/docs/cmd/outlook/mail/mail-searchfolder-add.mdx
@@ -36,6 +36,26 @@ m365 outlook mail searchfolder add [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Mail.ReadWrite |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Mail.ReadWrite |
+
+  </TabItem>
+</Tabs>
+
+
 ## Examples
 
 Create a mail search folder in the user's mailbox specified by id for messages from the inbox that contain specific subject
