--- a/docs/docs/cmd/spo/homesite/homesite-set.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-set.mdx
@@ -160,7 +160,7 @@ m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal --au
   <TabItem value="Markdown">
 
   ```md
-  # spo homesite set --debug "false" --verbose "false" --siteUrl "https://contoso.sharepoint.com/sites/TheLanding" --vivaConnectionsDefaultStart "true" --audienceNames "active"
+  # spo homesite set --siteUrl "https://contoso.sharepoint.com/sites/TheLanding" --vivaConnectionsDefaultStart "true" --audienceNames "active"
 
   Date: 7/27/2025
 
