--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -6,7 +6,7 @@ The v11 release of CLI for Microsoft 365 introduces several breaking changes. To
 
 ### Removed commands
 
-Some commands were removed because they used either undocumented APIs that required extra scope to be consented on the app registration or obsolete APIs.
+Some commands were removed because they used either undocumented APIs that required extra scope to be consented on the app registration or obsolete APIs or because the product began end-of-life phase.
 
 Read the documentation for alternative commands to find out how to use them and what permissions are required.
 
