--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -10,7 +10,7 @@ Some commands were removed because they used either undocumented APIs that requi
 
 Read the documentation for alternative commands to find out how to use them and what permissions are required.
 
-Command | Aternative
+Command | Alternative
 --- | ---
 `pp card clone` | No alternative
 `pp card get` | No alternative
