Updates 'environment get' commands with default option. Closes #6545

--- a/docs/docs/cmd/flow/environment/environment-get.mdx
+++ b/docs/docs/cmd/flow/environment/environment-get.mdx
@@ -16,7 +16,10 @@ m365 flow environment get [options]
 
 ```md definition-list
 `-n, --name [name]`
-: The name of the environment to get information about. When not specified, the default environment is retrieved.
+: The name of the environment to get information about. When not specified, the default environment is retrieved. Specify either `name` or `--default`, but not both.
+
+`--default`
+: Indicates that the default environment should be retrieved. Specify either `name` or `--default`, but not both.
 ```
 
 <Global />
@@ -42,12 +45,10 @@ m365 flow environment get --name Default-d87a7535-dd31-4437-bfe1-95340acd55c5
 Get information about the default Microsoft Flow environment.
 
 ```sh
-m365 flow environment get
+m365 flow environment get --default
 ```
 
 ## Response
-
-### Standard response
 
 <Tabs>
   <TabItem value="JSON">
@@ -153,7 +154,7 @@ m365 flow environment get
   <TabItem value="Markdown">
 
   ```md
-  # flow environment get
+  # flow environment get --default
 
   Date: 8/2/2023
 
