--- a/docs/docs/cmd/pa/environment/environment-get.mdx
+++ b/docs/docs/cmd/pa/environment/environment-get.mdx
@@ -16,7 +16,10 @@ m365 pa environment get [options]
 
 ```md definition-list
 `-n, --name [name]`
-: The name of the environment. When not specified, the default environment is retrieved.
+: The name of the environment. When not specified, the default environment is retrieved. Specify either `name` or `--default`, but not both.
+
+`--default`
+: Indicates that the default environment should be retrieved. Specify either `name` or `--default`, but not both.
 ```
 
 <Global />
@@ -36,7 +39,7 @@ If the environment with the name you specified doesn't exist, you will get the `
 Get information about the default Power Apps environment.
 
 ```sh
-m365 pa environment get
+m365 pa environment get --default
 ```
 
 Get information about the Power Apps environment with the specified name.
