--- a/docs/docs/cmd/pp/environment/environment-get.mdx
+++ b/docs/docs/cmd/pp/environment/environment-get.mdx
@@ -16,7 +16,10 @@ m365 pp environment get [options]
 
 ```md definition-list
 `-n, --name [name]`
-: The name of the environment. When not specified, the default environment is retrieved.
+: The name of the environment. When not specified, the default environment is retrieved. Specify either `name` or `default`, but not both.
+
+`--default`
+: Indicates that the default environment should be retrieved. Specify either `name` or `default`, but not both.
 
 `--asAdmin`
 : Run the command as admin and retrieve details of environments you do not have explicitly assigned permissions to.
@@ -53,7 +56,7 @@ m365 pp environment get --name Default-d87a7535-dd31-4437-bfe1-95340acd55c5 --as
 Get information about the default Power Platform environment.
 
 ```sh
-m365 pp environment get
+m365 pp environment get --default
 ```
 
 ## Response
