--- a/docs/docs/cmd/spo/homesite/homesite-set.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-set.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo homesite set
 
-Configures the specified SharePoint Home Site setting options such as draft mode, audiences, targeted license type, and Viva Connections default start.
+Sets the specified site as the home site.
 
 ## Usage
 
@@ -16,16 +16,16 @@ m365 spo homesite set [options]
 
 ```md definition-list
 `-u, --siteUrl <siteUrl>`
-: The URL of the Home Site
+: The URL of the home site
 
 `--draftMode [draftMode]` 
 : Set draft status. Valid values are: `true`, `false`.
 
 `--audienceIds [audienceIds]` 
-: Comma-separated list of M365 group Ids to set as audiences. Specify either `audienceIds` or `audienceNames`, but not both.
+: Comma-separated list of group Ids to set as audiences. Specify either `audienceIds` or `audienceNames`, but not both.
 
 `--audienceNames [audienceNames]` 
-: Comma-separated list of M365 group names or Active Directory security groups to set as audiences. Specify either `audienceIds` or `audienceNames`, but not both.
+: Comma-separated list of group names to set as audiences. You must use either `audienceIds` or `audienceNames`, but not both. Pass '' to clear audience.
 
 `--targetedLicenseType [targetedLicenseType]` 
 : Value of either `everyone`, `frontLineWorkers` or `informationWorkers`.
@@ -46,47 +46,46 @@ To use this command you must be a Global or SharePoint administrator.
 
 ## Examples
 
-Sets the Home site to the provided site collection url and sets the Viva Connections landing experience to the SharePoint home site
+Sets the home site to the provided site collection url and sets the Viva Connections landing experience to the SharePoint home site
 
 ```sh
 m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart true
 ```
 
-Set the Home site in draft mode
+Set the home site in draft mode
 
 ```sh
-m365 spo homesite set -siteUrl https://contoso.sharepoint.com/sites/contosoportal --draftMode true
+m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --draftMode true
 ```
 
 Set the audience to everyone
 
 ```sh
-m365 spo homesite set -siteUrl https://contoso.sharepoint.com/sites/contosoportal --targetedLicenseType "everyone"
+m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --targetedLicenseType "everyone"
 ```
 
-Set the audience to M365 groups using M365 Groups Ids
+Set the audience to groups using groups Ids
 
 ```sh
-m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal --audienceIds "978b5280-4f80-47ea-a1db-b0d1d2fb1ba4,21af775d-17b3-4637-94a4-2ba8625277cb"
+m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceIds "978b5280-4f80-47ea-a1db-b0d1d2fb1ba4,21af775d-17b3-4637-94a4-2ba8625277cb"
 ```
 
-Set the audience to M365 groups or Azure Directory security groups using names 
+Set the audience to using their display name
 
 ```sh
-m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal --audienceNames "Marketing, IT department"
+m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceNames "Marketing, IT department"
 ```
 
 Clear the audience and set to draft 
 
 ```sh
-m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal --audienceNames '' --draftMode true
+m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceNames '' --draftMode true
 ```
-
 
 Configure multiple options
 
 ```sh
-m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal --audienceNames 'Marketing, IT department' --draftMode true --targetedLicenseType "everyone" --vivaConnectionsDefaultStart true
+m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceNames 'Marketing, IT department' --draftMode true --targetedLicenseType "everyone" --vivaConnectionsDefaultStart true
 ```
 
 ## Response
@@ -138,7 +137,7 @@ m365 spo homesite set -u https://contoso.sharepoint.com/sites/contosoportal --au
   IsInDraftMode,IsVivaBackendSite,SiteId,TargetedLicenseType,Title,Url,VivaConnectionsDefaultStart,WebId
   1,0,431d7819-4aaf-49a1-b664-b2fe9e609b63,2,The Landing,https://contoso.sharepoint.com/sites/TheLanding,1,626c1724-8ac8-45d5-af87-c07c752fab75
   ```
-
+  
   </TabItem>
   <TabItem value="Markdown">
 
