--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -6,9 +6,9 @@ The v11 release of CLI for Microsoft 365 introduces several breaking changes. To
 
 ### `spo homesite set` no longer adds new home sites
 
-The [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) command has been updated to only modify existing home sites. It will no longer add new sites as home sites.
+The [spo homesite set --siteUrl](./cmd/spo/homesite/homesite-set.mdx) command has been updated to only modify existing home sites. It will no longer add new sites as home sites.
 
 #### What action do I need to take?
 
 - **For adding new home sites**: Use the new [spo homesite add](./cmd/spo/homesite/homesite-add.mdx) command instead
-- **For updating existing home sites**: Continue using [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) as before with additional options
+- **For updating existing home sites**: Continue using [spo homesite set --siteUrl](./cmd/spo/homesite/homesite-set.mdx) as before with additional options
