--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -6,7 +6,7 @@ The v11 release of CLI for Microsoft 365 introduces several breaking changes. To
 
 ### `spo homesite set` no longer adds new home sites
 
-The [spo homesite set --siteUrl](./cmd/spo/homesite/homesite-set.mdx) command has been updated to only modify existing home sites. It will no longer add new sites as home sites.
+The [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) command has been updated to only modify existing home sites. It will no longer add a new site as home site if you don't have any configured yet.
 
 #### What action do I need to take?
 
