--- a/docs/docs/cmd/spo/homesite/homesite-set.mdx
+++ b/docs/docs/cmd/spo/homesite/homesite-set.mdx
@@ -4,7 +4,7 @@ import TabItem from '@theme/TabItem';
 
 # spo homesite set
 
-Sets the specified site as the home site.
+Updates an existing SharePoint home site.
 
 ## Usage
 
@@ -15,7 +15,7 @@ m365 spo homesite set [options]
 ## Options
 
 ```md definition-list
-`-u, --siteUrl <siteUrl>`
+`-u, --url <url>`
 : The URL of the home site
 
 `--draftMode [draftMode]` 
@@ -28,7 +28,7 @@ m365 spo homesite set [options]
 : Comma-separated list of group names to set as audiences. You must use either `audienceIds` or `audienceNames`, but not both. Pass `''` to clear audience.
 
 `--targetedLicenseType [targetedLicenseType]` 
-: Value of either `everyone`, `frontLineWorkers` or `informationWorkers`.
+: Value of either `everyone`, `frontLineWorkers` or `informationWorkers` to create an experience for a distinct audience by license type.
 
 `--vivaConnectionsDefaultStart [vivaConnectionsDefaultStart]`
 : Specifies whether the home site is the default start for Viva Connections. Accepts `true` or `false`.
@@ -49,43 +49,43 @@ To use this command you must be a Global or SharePoint administrator.
 Sets the home site to the provided site collection url and sets the Viva Connections landing experience to the SharePoint home site
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart true
+m365 spo homesite set --url https://contoso.sharepoint.com/sites/comms --vivaConnectionsDefaultStart true
 ```
 
 Set the home site in draft mode
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --draftMode true
+m365 spo homesite set --url https://contoso.sharepoint.com/sites/contosoportal --draftMode true
 ```
 
 Set the audience to everyone
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --targetedLicenseType "everyone"
+m365 spo homesite set --url https://contoso.sharepoint.com/sites/contosoportal --targetedLicenseType "everyone"
 ```
 
 Set the audience to groups using groups Ids
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceIds "978b5280-4f80-47ea-a1db-b0d1d2fb1ba4,21af775d-17b3-4637-94a4-2ba8625277cb"
+m365 spo homesite set --url https://contoso.sharepoint.com/sites/contosoportal --audienceIds "978b5280-4f80-47ea-a1db-b0d1d2fb1ba4,21af775d-17b3-4637-94a4-2ba8625277cb"
 ```
 
 Set the audience to using their display name
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceNames "Marketing, IT department"
+m365 spo homesite set --url https://contoso.sharepoint.com/sites/contosoportal --audienceNames "Marketing, IT department"
 ```
 
 Clear the audience and set to draft 
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceNames '' --draftMode true
+m365 spo homesite set --url https://contoso.sharepoint.com/sites/contosoportal --audienceNames '' --draftMode true
 ```
 
 Configure multiple options
 
 ```sh
-m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoportal --audienceNames 'Marketing, IT department' --draftMode true --targetedLicenseType "everyone" --vivaConnectionsDefaultStart true
+m365 spo homesite set --url https://contoso.sharepoint.com/sites/contosoportal --audienceNames 'Marketing, IT department' --draftMode true --targetedLicenseType "everyone" --vivaConnectionsDefaultStart true
 ```
 
 ## Response
@@ -142,7 +142,7 @@ m365 spo homesite set --siteUrl https://contoso.sharepoint.com/sites/contosoport
   <TabItem value="Markdown">
 
   ```md
-  # spo homesite set --siteUrl "https://contoso.sharepoint.com/sites/TheLanding" --vivaConnectionsDefaultStart "true" --audienceNames "active"
+  # spo homesite set --url "https://contoso.sharepoint.com/sites/TheLanding" --vivaConnectionsDefaultStart "true" --audienceNames "active"
 
   Date: 7/27/2025
 
