--- a/docs/docs/v11-upgrade-guidance.mdx
+++ b/docs/docs/v11-upgrade-guidance.mdx
@@ -11,4 +11,4 @@ The [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) command has been upd
 #### What action do I need to take?
 
 - **For adding new home sites**: Use the new [spo homesite add](./cmd/spo/homesite/homesite-add.mdx) command instead
-- **For updating existing home sites**: Continue using [spo homesite set --siteUrl](./cmd/spo/homesite/homesite-set.mdx) as before with additional options
+- **For updating existing home sites**: Continue using [spo homesite set](./cmd/spo/homesite/homesite-set.mdx) as before with required option `siteUrl`.
