--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,21 @@ sidebar_position: 4
 
 # Release notes
 
+## v11.0.0 (beta)
+
+### Changes
+
+- added CLI for Microsoft 365 MCP server guide [#6817](https://github.com/pnp/cli-microsoft365/pull/6817)
+
+### ⚠️ Breaking changes
+
+ - updated [spo homesite set](../cmd/spo/homesite/homesite-set.mdx) command to work with multiple home sites [#6489](https://github.com/pnp/cli-microsoft365/issues/6489)
+ - ensured `list` commands always have an output [#6824](https://github.com/pnp/cli-microsoft365/issues/6824)
+ - updated `teams report` commands to return an array of items [#6739](https://github.com/pnp/cli-microsoft365/issues/6739)
+ - removed `viva engage group` commands [#6285](https://github.com/pnp/cli-microsoft365/issues/6285)
+ - removed deprecated commands [#6577](https://github.com/pnp/cli-microsoft365/issues/6577)
+ - removed `pp card` commands [#6852](https://github.com/pnp/cli-microsoft365/issues/6852)
+
 ## [v10.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v10.11.0)
 
 ### New commands
