Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -6,9 +6,15 @@ sidebar_position: 4
 
 ## v11.0.0 (beta)
 
+**Outlook:**
+
+- [outlook mail searchfolder add](../cmd/outlook/mail/mail-searchfolder-add.mdx) - creates a new mail search folder in the user's mailbox [#6276](https://github.com/pnp/cli-microsoft365/issues/6276)
+
 ### Changes
 
 - added CLI for Microsoft 365 MCP server guide [#6817](https://github.com/pnp/cli-microsoft365/pull/6817)
+- fixed dependabot updates
+- added additional platform options to `entra app add command`. [6570](https://github.com/pnp/cli-microsoft365/issues/6570)
 
 ### ⚠️ Breaking changes
 
