--- a/docs/docs/cmd/pp/environment/environment-get.mdx
+++ b/docs/docs/cmd/pp/environment/environment-get.mdx
@@ -16,10 +16,10 @@ m365 pp environment get [options]
 
 ```md definition-list
 `-n, --name [name]`
-: The name of the environment. When not specified, the default environment is retrieved. Specify either `name` or `--default`, but not both.
+: The name of the environment. When not specified, the default environment is retrieved. Specify either `name` or `default`, but not both.
 
 `--default`
-: Indicates that the default environment should be retrieved. Specify either `name` or `--default`, but not both.
+: Indicates that the default environment should be retrieved. Specify either `name` or `default`, but not both.
 
 `--asAdmin`
 : Run the command as admin and retrieve details of environments you do not have explicitly assigned permissions to.
